--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_script:
    - export DB_NAME="test_db"
    - psql -c 'create database test_db;' -U postgres
 script:
- - pytest app/test/
+ - pytest --cov=app
 after_success:
  - coveralls
   
